@@ -2,6 +2,9 @@ Changelog for HTML-Tree
 
 {{$NEXT}}
 
+    [FIXES]
+    * as_XML would not allow single-character attribute names (RT #86566)
+
 5.904    2013-06-08
    Trial Release by Christopher J. Madsen
 
